--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width">
 		<meta name="description" content="Spécialisé en développement Front-end - création et optimisation de sites Web">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<script src="https://kit.fontawesome.com/4ac43557e1.js" crossorigin="anonymous"></script>
