--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					
 					<section id="experiences">
 
-						<h2><i class="fas fa-briefcase"></i>Expériences professionelles</h2>
+						<h2><i class="fas fa-briefcase"></i>Expériences professionnelles</h2>
 
 						<div class="flex">
 							<div class="date">
