--- a/index.html
+++ b/index.html
@@ -41,6 +41,20 @@
 							<div class="date">
 								<i class="far fa-dot-circle"></i>
 								<ul>
+									<li><strong>Juin 2022<br>Janvier 2023<br>Nancy</strong><li>
+								</ul>
+							</div>
+							<div class="etablissement">
+								<h3>POP School</h3>
+								<p><em>Concepteur Designer UI</em></p>
+								<p>Réalisation d'outils de communication numériques adaptés à différents support de publication et de communication, en tenant compte de l'utilisateur, des standards, de l'accessibilité, de l'ergonomie et de la bonne visibilité du produit.</p>
+							</div>
+						</div>
+						
+						<div class="flex">
+							<div class="date">
+								<i class="fas fa-circle"></i>
+								<ul>
 									<li><strong>2020<br>À distance</strong><li>
 								</ul>
 							</div>
