Changement webdesigner en UI Designer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				
 				<div class="titre">
 					<h1>Maxime <span class="police">Joly</span></h1>
-					<p><strong><span class="orange">Web</span>designer</strong></p>
+					<p><strong><span class="orange">UI</span> Designer</strong></p>
 				</div>
 
 			</header>
@@ -191,7 +191,7 @@
 
 					<section id="a_propos">
 						<h2>À propos de moi</h2>
-						<p>Passionné par l’univers de l’informatique et du Web, je suis actuellement en reconversion professionnelle.<br>Aimant relever de nouveaux challenges, persévérant et doté d’une grande curiosité, j’ai comme projet de me former pour devenir Webdesigner.</p>	
+						<p>Passionné par l’univers de l’informatique et du Web, je suis actuellement en reconversion professionnelle.<br>Aimant relever de nouveaux challenges, persévérant et doté d’une grande curiosité, j’ai comme projet de me former pour devenir UI Designer.</p>	
 					</section>
 
 					<section id="loisirs">
