--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
 						<div class="contact">
 							<p><strong>Adresse<br><a href="https://goo.gl/maps/AdQEh6WAdCW69Sag7" target="_blank" title="Cliquez pour me situer sur Google Maps">Vandoeuvre-lès-Nancy</a></strong></p>
 							<p><strong>Téléphone<br><a href="tel:+33678204323">06 78 20 43 23</a></strong></p>
-							<p><strong>Email<br><a href="mailto:maxime.joly54@gmail.com" target="_blank"></a>maxime.joly54@gmail.com</strong></p>
-							<p><strong>Site web<br><a href="https://maxime-joly.fr/"></a>https://maxime-joly.fr/</strong></p>
+							<p><strong>Email<br><a href="mailto:maxime.joly54@gmail.com" target="_blank">maxime.joly54@gmail.com</a></strong></p>
+							<p><strong>Site web<br><a href="https://maxime-joly.fr/" target="_blank">https://maxime-joly.fr/</a></strong></p>
 							<p><strong>Skype<br><a href="callto:live:.cid.d1312ed5763ac002">live:.cid.d1312ed5763ac002</a></strong></p>
 						</div>
 					</section>
